--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
     "antd": "^5.12.5",
     "dayjs": "^1.11.7",
     "jwt-decode": "^3.1.2",
