--- a/.github/workflows/master-test.yml
+++ b/.github/workflows/master-test.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 env:
-  DATABASE_URL: postgresql://postgres:postgres@localhost:5432/mindmap_test?schema=public
+  DATABASE_URL: postgresql://postgres:postgres@localhost:5432/sebiz_test?schema=public
   APP_PORT: 3000
  
 
@@ -22,7 +22,7 @@ jobs:
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: mindmap_test
+          POSTGRES_DB: sebiz_test
         ports:
           - 5432:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
