--- a/.github/workflows/master-test.yml
+++ b/.github/workflows/master-test.yml
@@ -49,6 +49,7 @@ jobs:
     env:
       REACT_APP_STRIPE_PUBLISHABLE_KEY: ${{ secrets.STRIPE_PUBLISHABLE_KEY }}
       REACT_APP_STRIPE_REGISTRATION_PRICE_ID: ${{ secrets.STRIPE_REGISTRATION_PRICE_ID }}
+      CI: false
 
     steps:
       - name: Checkout Git repository
