Update dockerfile's context for the current project

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,18 +1,18 @@
 FROM node:18.0.0-alpine3.14
 RUN npm i -g npm@8.10.0
 
-RUN addgroup --gid 990 mindmap
-RUN adduser mindmap --home /home/mindmap --uid 990 --system -G mindmap
+RUN addgroup --gid 990 athlete-regystration-system
+RUN adduser athlete-regystration-system --home /home/athlete-regystration-system --uid 990 --system -G athlete-regystration-system
 
-USER mindmap
+USER athlete-regystration-system
 
-RUN mkdir /home/mindmap/client
-WORKDIR /home/mindmap/client
-COPY --chown=mindmap ./package*.json ./
+RUN mkdir /home/athlete-regystration-system/client
+WORKDIR /home/athlete-regystration-system/client
+COPY --chown=athlete-regystration-system ./package*.json ./
 
 RUN npm install
 
-COPY --chown=mindmap . .
+COPY --chown=athlete-regystration-system . .
 
 RUN npm run build
 
