--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,19 +1,19 @@
 FROM node:18.0.0-alpine3.14
 RUN npm i -g npm@8.10.0
 
-RUN addgroup --gid 990 mindmap
-RUN adduser mindmap --home /home/mindmap --uid 990 --system -G mindmap
+RUN addgroup --gid 990 athlete-registration-system
+RUN adduser athlete-registration-system --home /home/athlete-registration-system --uid 990 --system -G athlete-registration-system
 
-USER mindmap
+USER athlete-registration-system
 
-RUN mkdir /home/mindmap/server
-WORKDIR /home/mindmap/server
-COPY --chown=mindmap ./package*.json ./
+RUN mkdir /home/athlete-registration-system/server
+WORKDIR /home/athlete-registration-system/server
+COPY --chown=athlete-registration-system ./package*.json ./
 COPY ./prisma prisma
 
 RUN npm install
 
-COPY --chown=mindmap . .
+COPY --chown=athlete-registration-system . .
 
 EXPOSE 3000
 
