Remove migrations from the server docker file

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:18.0.0-alpine3.14
 
-RUN mkdir /home/athlete-registration-system/server
+RUN mkdir -p /home/athlete-registration-system/server
 WORKDIR /home/athlete-registration-system/server
 COPY ./package*.json tsconfig.json ./
 COPY prisma ./prisma
@@ -9,11 +9,8 @@ RUN npm ci
 
 COPY src ./src
 
-COPY --chown=athlete-registration-system . .
-
-RUN npm run db:migrate:ci && \
-    npm run build && \
-    npm run prune --production
+RUN npm run build && \
+    npm prune --production
 
 
 EXPOSE 3000
