--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,13 +19,18 @@ jobs:
                 password: ${{ secrets.GITHUB_TOKEN }}
             - name: Set up Docker Buildx
               uses: docker/setup-buildx-action@v3
+            - name: set lower case owner name
+              run: |
+                    echo "OWNER_LC=${OWNER,,}" >>${GITHUB_ENV}
+              env:
+                    OWNER: '${{ github.actor }}'
             - name: Build and push
               uses: docker/build-push-action@v5
               with:
                 context: .
                 file: ./client/Dockerfile
                 push: true
-                tags: ${{ github.actor }}/sebizclient:${{ github.run_id }}
+                tags: ${{ env.OWNER_LC }}/sebizclient:${{ github.run_id }}
 
     build-server:
         runs-on: ubuntu-latest
@@ -40,10 +45,15 @@ jobs:
                 password: ${{ secrets.GITHUB_TOKEN }}
             - name: Set up Docker Buildx
               uses: docker/setup-buildx-action@v3
+            - name: set lower case owner name
+              run: |
+                    echo "OWNER_LC=${OWNER,,}" >>${GITHUB_ENV}
+              env:
+                    OWNER: '${{ github.actor }}'
             - name: Build and push
               uses: docker/build-push-action@v5
               with:
                 context: .
                 file: ./server/Dockerfile
                 push: true
-                tags: ${{ github.actor }}/sebizserver:${{ github.run_id }}
+                tags: ${{ env.OWNER_LC }}/sebizserver:${{ github.run_id }}
