--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,8 @@ on:
 jobs:
     build-client:
         runs-on: ubuntu-latest
+        permissions:
+            packages: write
         steps:
             - name: Checkout
               uses: actions/checkout@v4
@@ -34,6 +36,8 @@ jobs:
 
     build-server:
         runs-on: ubuntu-latest
+        permissions:
+            packages: write
         steps:
             - name: Checkout
               uses: actions/checkout@v4
