Fix creating the folder in the image

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:18.0.0-alpine3.14
 
-RUN mkdir /home/athlete-regystration-system/client
+RUN mkdir -p /home/athlete-regystration-system/client
 WORKDIR /home/athlete-regystration-system/client
 COPY client/package.json client/package-lock.json ./
 
