Copy the tsconfig to the client image as well

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,7 +2,7 @@ FROM node:18.0.0-alpine3.14
 
 RUN mkdir -p /home/athlete-regystration-system/client
 WORKDIR /home/athlete-regystration-system/client
-COPY client/package.json client/package-lock.json ./
+COPY client/package.json client/package-lock.json tsconfig.json ./
 
 RUN npm ci
 
@@ -11,7 +11,8 @@ COPY client/public ./public
 
 RUN npm install -g serve
 
-RUN npm run build
+RUN npm run build && \
+    npm prune --production
 
 EXPOSE 8080
 
