--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,6 +69,9 @@ jobs:
         permissions:
             packages: write
         steps:
+            - name: Checkout
+              uses: actions/checkout@v4
+  
             - name: Set up doctl
               uses: digitalocean/action-doctl@v2
               with:
@@ -105,6 +108,9 @@ jobs:
         permissions:
             packages: write
         steps:
+            - name: Checkout
+              uses: actions/checkout@v4
+  
             - name: Set up doctl
               uses: digitalocean/action-doctl@v2
               with:
