--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,12 +2,12 @@ FROM node:18.0.0-alpine
 
 RUN mkdir -p /home/athlete-registration-system/server
 WORKDIR /home/athlete-registration-system/server
-COPY package.json package-lock.json tsconfig.json ./
-COPY prisma ./prisma
+COPY server/package.json server/package-lock.json server/tsconfig.json ./
+COPY server/prisma ./prisma
 
 RUN npm ci
 
-COPY src ./src
+COPY server/src ./src
 
 RUN npm run build && \
     npm prune --production
