--- a/manifests/postgres-deployment.yml
+++ b/manifests/postgres-deployment.yml
@@ -14,6 +14,10 @@ spec:
       labels:
         service: postgres
     spec:
+      volumes:
+      - name: postgres-volume-mount
+        persistentVolumeClaim:
+          claimName: postgres-pvc
       containers:
       - name: postgres
         image: $DATABASE_IMAGE
