--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,5 +1,13 @@
 FROM node:18.0.0-alpine3.14
 
+ARG REACT_APP_STRIPE_PUBLISHABLE_KEY
+ARG REACT_APP_STRIPE_PRICE_ID
+ARG REACT_APP_SERVER_URL
+
+ENV REACT_APP_STRIPE_PUBLISHABLE_KEY=${REACT_APP_STRIPE_PUBLISHABLE_KEY}
+ENV REACT_APP_STRIPE_PRICE_ID=${REACT_APP_STRIPE_PRICE_ID}
+ENV REACT_APP_SERVER_URL=${REACT_APP_SERVER_URL}
+
 RUN mkdir -p /home/athlete-regystration-system/client
 WORKDIR /home/athlete-regystration-system/client
 COPY client/package.json client/package-lock.json client/tsconfig.json ./
