--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -100,6 +100,7 @@ jobs:
                   POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}
                   POSTGRES_USER=${{ secrets.POSTGRES_USER }}
                   POSTGRES_DB=${{ secrets.POSTGRES_DB }}
+                  DATABASE_URL=${{ secrets.DATABASE_URL }}
 
 
     deploy-client-kube:
