change syntax of variables in dockerfiles

--- a/server/Dockerfile.database
+++ b/server/Dockerfile.database
@@ -11,7 +11,7 @@ ENV POSTGRES_DB=${POSTGRES_DB}
 FROM node:18.0.0-alpine as node_builder
 
 ARG DATABASE_URL
-ENV DATABASE_URL $DATABASE_URL
+ENV DATABASE_URL=${DATABASE_URL}
 
 WORKDIR /home/athlete-registration-system/server
 
