Do not try to connect to itself as a node for the postgres

--- a/manifests/postgres-deployment.yml
+++ b/manifests/postgres-deployment.yml
@@ -32,7 +32,7 @@ spec:
         - name: POSTGRES_DB
           value: $POSTGRES_DB
         - name: DATABASE_URL
-          value: $DATABASE_URL
+          value: postgresql://$POSTGRES_USER:$POSTGRES_PASSWORD@localhost:5432/$POSTGRES_DB
       restartPolicy: Always
       
 
