Try to run the migration through the server docker image

--- a/manifests/postgres-deployment.yml
+++ b/manifests/postgres-deployment.yml
@@ -19,7 +19,7 @@ spec:
         emptyDir: {}
       containers:
       - name: postgres
-        image: $DATABASE_IMAGE
+        image: postgres:15.0-alpine
         volumeMounts:
         - name: postgres-volume-mount
           mountPath: /var/lib/postgresql/data
