--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -9,8 +9,6 @@ RUN npm ci
 
 COPY server/src ./src
 
-RUN npx prisma migrate deploy
-
 RUN npm run build && \
     npm prune --production
 
@@ -18,4 +16,4 @@ ENV NODE_ENV=production
 
 EXPOSE 3000
 
-CMD ["node", "./dist/index.js"]
+CMD  npx prisma migrate deply && node dist/index.js
