--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -16,4 +16,4 @@ ENV NODE_ENV=production
 
 EXPOSE 3000
 
-CMD  npx prisma migrate deply && node dist/index.js
+CMD  npx prisma migrate deploy && node dist/index.js
