--- a/manifests/client-deployment.yml
+++ b/manifests/client-deployment.yml
@@ -19,11 +19,20 @@ spec:
             - containerPort: 3000
           env:
             - name: REACT_APP_SERVER_URL
-              value: $SERVER_URL
+              valueFrom:
+                secretKeyRef:
+                  name: client-secrets
+                  key: REACT_APP_SERVER_URL
             - name: REACT_APP_STRIPE_PUBLISHABLE_KEY
-              value: $STRIPE_PUBLISHABLE_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: client-secrets
+                  key: REACT_APP_STRIPE_PUBLISHABLE_KEY
             - name: REACT_APP_STRIPE_REGISTRATION_PRICE_ID
-              value: $STRIPE_REGISTRATION_PRICE_ID
+              valueFrom:
+                secretKeyRef:
+                  name: client-secrets
+                  key: REACT_APP_STRIPE_REGISTRATION_PRICE_ID
 ---
 apiVersion: v1
 kind: Service
