--- a/manifests/client-secrets.yml
+++ b/manifests/client-secrets.yml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
-kind: Secret
+kind: ConfigMap
 metadata:
-  name: client-secrets
+  name: client-conifg
 type: Opaque
 data:
   REACT_APP_SERVER_URL: $REACT_APP_SERVER_URL
