--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - master
+    paths-ignore:
+      - '**.md'
   workflow_dispatch:
     
 jobs:
@@ -130,9 +132,9 @@ jobs:
               run:
                 |
                 export CLIENT_IMAGE=ghcr.io/${{ env.OWNER_LC }}/sebizclient:${{ github.run_id }}
-                export SERVER_URL=${{ secrets.SERVER_URL }}
-                export STRIPE_PUBLISHABLE_KEY=${{ secrets.STRIPE_PUBLISHABLE_KEY }}
-                export STRIPE_REGISTRATION_PRICE_ID=${{ secrets.STRIPE_REGISTRATION_PRICE_ID }}
+                export REACT_APP_SERVER_URL=${{ secrets.SERVER_URL }}
+                export REACT_APP_STRIPE_PUBLISHABLE_KEY=${{ secrets.STRIPE_PUBLISHABLE_KEY }}
+                export REACT_APP_STRIPE_REGISTRATION_PRICE_ID=${{ secrets.STRIPE_REGISTRATION_PRICE_ID }}
                 cat manifests/client-map.yml | envsubst | kubectl apply -f -
                 cat manifests/client-deployment.yml | envsubst | kubectl apply -f -
     deploy-server-kube:
@@ -179,3 +181,17 @@ jobs:
                 export POSTGRES_USER=${{ secrets.POSTGRES_USER }}
                 export POSTGRES_DB=${{ secrets.POSTGRES_DB }}
                 cat manifests/postgres-deployment.yml | envsubst | kubectl apply -f -
+
+
+    release-gh:
+      name: Github release
+      runs-on: ubuntu-latest
+      needs: [deploy-client-kube, deploy-server-kube]
+      permissions:
+        contents: write
+      steps:
+        - name: Release
+          uses: softprops/action-gh-release@v1
+          with:
+            generate_release_notes: true
+                
