--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,7 @@ on:
     
 jobs:
     build-client:
+        name: Build client docker image
         runs-on: ubuntu-latest
         permissions:
             packages: write
@@ -46,6 +47,7 @@ jobs:
                   REACT_APP_STRIPE_REGISTRATION_PRICE_ID=${{ secrets.STRIPE_REGISTRATION_PRICE_ID }}
 
     build-server:
+        name: Build server docker image
         runs-on: ubuntu-latest
         permissions:
             packages: write
@@ -74,6 +76,7 @@ jobs:
                 tags: ghcr.io/${{ env.OWNER_LC }}/sebizserver:${{ github.run_id }}
 
     build-database:
+        name: Build database docker image
         runs-on: ubuntu-latest
         needs: [build-server]
         permissions:
@@ -140,14 +143,53 @@ jobs:
               run:
                 |
                 export CLIENT_IMAGE=ghcr.io/${{ env.OWNER_LC }}/sebizclient:${{ github.run_id }}
-                export REACT_APP_SERVER_URL=${{ secrets.SERVER_URL }}
-                export REACT_APP_STRIPE_PUBLISHABLE_KEY=${{ secrets.STRIPE_PUBLISHABLE_KEY }}
-                export REACT_APP_STRIPE_REGISTRATION_PRICE_ID=${{ secrets.STRIPE_REGISTRATION_PRICE_ID }}
-                cat manifests/client-map.yml | envsubst | kubectl apply -f -
                 cat manifests/client-deployment.yml | envsubst | kubectl apply -f -
+
+    deploy-database:
+        name: Deploy database to Kubernetes
+        needs: [build-database]
+        runs-on: ubuntu-latest
+        permissions:
+            packages: write
+        steps:
+          - name: Set up kubectl
+            uses: tale/kubectl-action@v1
+            with:
+              base64-kube-config: ${{ secrets.KUBE_CONFIG }}
+
+          - name: Deploy to Kubernetes
+            run:
+              |
+              export DATABASE_IMAGE=ghcr.io/${{ env.OWNER_LC }}/sebizdatabase:${{ github.run_id }}
+              export POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}
+              export POSTGRES_USER=${{ secrets.POSTGRES_USER }}
+              export POSTGRES_DB=${{ secrets.POSTGRES_DB }}
+              cat manifests/postgres-deployment.yml | envsubst | kubectl apply -f -
+          - name: Wait for database to be ready
+            run: |
+              kubectl wait --for=condition=ready pod -l service=postgres --timeout=60s
+
+    migrate-database:
+        name: Migrate database
+        needs: [deploy-database]
+        runs-on: ubuntu-latest
+        permissions:
+            packages: write
+        steps:
+          - uses: actions/checkout@v3
+          - name: Use Node.js
+            uses: actions/setup-node@v3
+            with:
+              node-version: 18.x
+          - name: Install dependencies
+            run: cd server && npm ci
+          - name: Migrate database
+            run: cd server && npx prisma migrate deploy
+            env:
+              DATABASE_URL: ${{ secrets.DATABASE_URL }}
     deploy-server-kube:
         name: Deploy server to Kubernetes
-        needs: [build-database]
+        needs: [migrate-database]
         runs-on: ubuntu-latest
         permissions:
             packages: write
