--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,35 +75,35 @@ jobs:
                 push: true
                 tags: ghcr.io/${{ env.OWNER_LC }}/sebizserver:${{ github.run_id }}
 
-    build-database:
-        name: Build database docker image
-        runs-on: ubuntu-latest
-        needs: [build-server]
-        permissions:
-            packages: write
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v4
-            - name: Login to GHCR
-              uses: docker/login-action@v3
-              with:
-                registry: ghcr.io
-                username: ${{ github.actor }}
-                password: ${{ secrets.GITHUB_TOKEN }}
-            - name: Set up Docker Buildx
-              uses: docker/setup-buildx-action@v3
-            - name: set lower case owner name
-              run: |
-                    echo "OWNER_LC=${OWNER,,}" >>${GITHUB_ENV}
-              env:
-                    OWNER: '${{ github.actor }}'
-            - name: Build and push
-              uses: docker/build-push-action@v5
-              with:
-                context: .
-                file: ./server/Dockerfile.database
-                push: true
-                tags: ghcr.io/${{ env.OWNER_LC }}/sebizdatabase:${{ github.run_id }}
+    # build-database:
+    #     name: Build database docker image
+    #     runs-on: ubuntu-latest
+    #     needs: [build-server]
+    #     permissions:
+    #         packages: write
+    #     steps:
+    #         - name: Checkout
+    #           uses: actions/checkout@v4
+    #         - name: Login to GHCR
+    #           uses: docker/login-action@v3
+    #           with:
+    #             registry: ghcr.io
+    #             username: ${{ github.actor }}
+    #             password: ${{ secrets.GITHUB_TOKEN }}
+    #         - name: Set up Docker Buildx
+    #           uses: docker/setup-buildx-action@v3
+    #         - name: set lower case owner name
+    #           run: |
+    #                 echo "OWNER_LC=${OWNER,,}" >>${GITHUB_ENV}
+    #           env:
+    #                 OWNER: '${{ github.actor }}'
+    #         - name: Build and push
+    #           uses: docker/build-push-action@v5
+    #           with:
+    #             context: .
+    #             file: ./server/Dockerfile.database
+    #             push: true
+    #             tags: ghcr.io/${{ env.OWNER_LC }}/sebizdatabase:${{ github.run_id }}
 
 
     deploy-client-kube:
@@ -147,7 +147,7 @@ jobs:
 
     deploy-database:
         name: Deploy database to Kubernetes
-        needs: [build-database]
+        needs: [build-server]
         runs-on: ubuntu-latest
         permissions:
             packages: write
