--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -152,6 +152,12 @@ jobs:
         permissions:
             packages: write
         steps:
+          - name: Checkout
+            uses: actions/checkout@v4
+          - name: Set up doctl
+            uses: digitalocean/action-doctl@v2
+            with:
+              token: ${{ secrets.DIGITAL_OCEAN_API_TOKEN_KEY }}
           - name: Set up kubectl
             uses: tale/kubectl-action@v1
             with:
