--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -111,7 +111,9 @@ jobs:
         needs: [build-client]
         runs-on: ubuntu-latest
         permissions:
-            packages: write
+          contents: read
+          packages: read
+          security-events: write
         steps:
             - name: Checkout
               uses: actions/checkout@v4
@@ -141,7 +143,9 @@ jobs:
         needs: [build-server]
         runs-on: ubuntu-latest
         permissions:
-            packages: write
+          contents: read
+          packages: read
+          security-events: write
         steps:
             - name: Checkout
               uses: actions/checkout@v4
