--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -304,6 +304,7 @@ jobs:
 
     release-gh:
       name: Github release
+      if: ${{ startsWith(github.ref, 'refs/tags/v') }}
       runs-on: ubuntu-latest
       needs: [deploy-client-kube, deploy-server-kube]
       permissions:
@@ -313,4 +314,22 @@ jobs:
           uses: softprops/action-gh-release@v1
           with:
             generate_release_notes: true
-                
+    
+    release-swagger:
+      name: Upload Swagger to Github pages
+      runs-on: ubuntu-latest
+      needs: [deploy-client-kube, deploy-server-kube]
+      permissions:
+        contents: write
+      steps:
+      - name: Generate Swagger UI
+        uses: Legion2/swagger-ui-action@v1
+        with:
+          output: swagger-ui
+          spec-file: server/swagger.yaml
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: swagger-ui
