--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -324,13 +324,14 @@ jobs:
       permissions:
         contents: write
       steps:
-      - name: Generate Swagger UI
-        uses: Legion2/swagger-ui-action@v1
-        with:
-          output: swagger-ui
-          spec-file: ./server/swagger.yaml
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: swagger-ui
+        - name: Generate Swagger UI
+          id: swagger-ui-action
+          uses: pjoc-team/swagger-ui-action@v0.0.2
+          with:
+            dir: './'
+            pattern: '*.json'
+        - name: Deploy to GitHub Pages
+          uses: peaceiris/actions-gh-pages@v3
+          with:
+            github_token: ${{ secrets.GITHUB_TOKEN }}
+            publish_dir: swagger-ui
