--- a/.github/workflows/master-build.yml
+++ b/.github/workflows/master-build.yml
@@ -2,7 +2,7 @@ name: BUILD
 
 on:
   pull_request:
-    branches: [ "master" ]
+    branches: [ "develop", "master", "hotfix/**", "feature/**", "bugfix/**", "release/**"]
 
   workflow_dispatch:
 
