--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -326,6 +326,8 @@ jobs:
       permissions:
         contents: write
       steps:
+        - name: Checkout
+          uses: actions/checkout@v4
         - name: Generate Swagger UI
           id: swagger-ui-action
           uses: pjoc-team/swagger-ui-action@v0.0.2
