--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -318,6 +318,8 @@ jobs:
           uses: actions/checkout@v4
         - name: Release
           uses: rymndhng/release-on-push-action@master
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           with:
             bump_version_scheme: minor
             use_github_release_notes: true
