--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -237,6 +237,7 @@ jobs:
               export POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}
               export POSTGRES_USER=${{ secrets.POSTGRES_USER }}
               export POSTGRES_DB=${{ secrets.POSTGRES_DB }}
+              kubectl apply -f manifests/postgres-pv.yml
               kubectl apply -f manifests/postgres-pvc.yml
               cat manifests/postgres-deployment.yml | envsubst | kubectl apply -f -
           - name: Wait for database to be ready
