Add storage class names

--- a/manifests/postgres-pv.yml
+++ b/manifests/postgres-pv.yml
@@ -6,6 +6,8 @@ spec:
   capacity:
     storage: 1Gi
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
+  persistentVolumeReclaimPolicy: Retain
   hostPath:
     path: /mnt/data
+  storageClassName: manual
