--- a/manifests/postgres-pvc.yml
+++ b/manifests/postgres-pvc.yml
@@ -4,10 +4,11 @@ metadata:
   name: postgres-pvc
 spec:
   accessModes:
-  - ReadWriteOnce
+  - ReadWriteMany
   resources:
     requests:
       storage: 1Gi
   selector:
     matchLabels:
       service: postgres
+  storageClassName: manual
