Rename storage class names

--- a/manifests/postgres-pv.yml
+++ b/manifests/postgres-pv.yml
@@ -10,4 +10,4 @@ spec:
   persistentVolumeReclaimPolicy: Retain
   hostPath:
     path: /mnt/data
-  storageClassName: manual
+  storageClassName: standard
