--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,9 @@
     "db:client:format": "prisma format",
     "db:migrate": "prisma migrate dev --skip-seed",
     "db:migration:create": "prisma migrate dev --create-only --name",
-    "db:migrate:ci": "prisma migrate deploy"
+    "db:migrate:ci": "prisma migrate deploy",
+    "db:seed": "prisma db seed",
+    "db:reset": "prisma migrate reset"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts --transpile-only"
@@ -37,7 +39,7 @@
   },
   "homepage": "https://github.com/GritzMaze/Mindmap.git#readme",
   "dependencies": {
-    "@prisma/client": "^5.7.1",
+    "@prisma/client": "^5.8.0",
     "axios": "^1.2.1",
     "bcrypt": "^5.1.0",
     "convict": "^6.2.4",
@@ -71,7 +73,7 @@
     "jest-mock-extended": "^3.0.4",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.1",
-    "prisma": "^5.7.1",
+    "prisma": "^5.8.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
